TestSuite/errors/err0022.pas
procedure Test;
begin
end;

function Func2(a : integer) : integer;
begin
end;

function Func2(var a : integer) : integer;
begin
end;

const cnst1 = 23;
      
var a : integer;
    s : string;
begin
 for s := 'aa' to 'bb' do;
end.